--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ baseurl: ""
 url: "https://sbookworm.github.io"
 github: "https://github.com/sbookworm"
 
-permalink: /:title/
+permalink: /:year/:month/:day/:title/
