--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ baseurl: ""
 url: "https://sbookworm.github.io"
 github: "https://github.com/sbookworm"
 
-theme: jekyll-theme-cascade
+theme: jekyll-theme-cayman
 
 permalink: /:year/:month/:day/:title/
