--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,7 @@ github: "https://github.com/sbookworm"
 theme: minima
 
 permalink: /:year/:month/:day/:title/
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
