Complete Chirpy theme setup

--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,138 @@
-# Chirpy Theme
-remote_theme: cotes2020/jekyll-theme-chirpy
+# The Site Configuration
 
-# Required plugins
-plugins:
-  - jekyll-remote-theme
-  - jekyll-seo-tag
-  - jekyll-feed
-  - jekyll-minifier
+# Import the theme
+theme: jekyll-theme-chirpy
 
+# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 lang: zh-CN
+
+# Change to your timezone › https://zones.arilyn.cc
 timezone: Asia/Shanghai
 
-title: Song Li
-tagline: 读书、编程、思考
-description: 个人博客
+# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
+# ↓ --------------------------
 
+title: Song Li
+
+tagline: 读书、编程、思考
+
+description: >
+  个人博客
+
+# Fill in the protocol & hostname for your site.
+# E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://sbookworm.github.io"
+
 github:
   username: sbookworm
 
 social:
+  # Change to your full name.
+  # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Song Li
   email: sbookworm@gmail.com
   links:
+    # The first element serves as the copyright owner's link
     - https://github.com/sbookworm
 
+# ↑ --------------------------
+# The end of `jekyll-seo-tag` settings
+
+# Prefer color scheme setting.
 theme_mode: dark
+
+# The CDN endpoint for media resources.
+# cdn:
+
+# the avatar on sidebar, support local or CORS resources
+avatar:
+
+# The URL of the site-wide social preview image used in SEO `og:image` meta tag.
+# social_preview_image:
+
+# boolean type, the global switch for TOC in posts.
+toc: true
+
+comments:
+  # Global switch for the post-comment system. Keeping it empty means disabled.
+  provider: # [disqus | utterances | giscus]
+
+pwa:
+  enabled: true
+  cache:
+    enabled: true
+
+paginate: 10
+
+# The base URL of your site
+baseurl: ""
+
+# ------------ The following options are not recommended to be modified ------------------
+
+kramdown:
+  footnote_backlink: "&#8617;&#xfe0e;"
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    css_class: highlight
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
+
+collections:
+  tabs:
+    output: true
+    sort_by: order
+
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
+      comments: true
+      toc: true
+      permalink: /posts/:title/
+  - scope:
+      path: _drafts
+    values:
+      comments: false
+  - scope:
+      path: ""
+      type: tabs
+    values:
+      layout: page
+      permalink: /:title/
+
+sass:
+  style: compressed
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  profile: false
+  blanklines: false
+  ignore:
+    envs: [development]
+
+exclude:
+  - "*.gem"
+  - "*.gemspec"
+  - docs
+  - tools
+  - README.md
+  - LICENSE
+  - purgecss.js
+  - "*.config.js"
+  - "package*.json"
+
+jekyll-archives:
+  enabled: [categories, tags]
+  layouts:
+    category: category
+    tag: tag
+  permalinks:
+    tag: /tags/:name/
+    category: /categories/:name/
